<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">かえるよ</string>

    <!-- Preference Key -->
    <string name="pref_key_use_aboutmode">pref_key_use_aboutmode</string>
    <string name="pref_key_use_subject">pref_key_use_subject</string>
    <!-- Button Text -->
    <string name="button_text_sendto">宛先を指定する</string>
    <string name="button_text_move_time">移動時間を指定する</string>
    <string name="button_text_send">送信</string>
    <!-- EditText Text -->
    <string name="edittext_hint_subject">件名</string>
    <string name="edittext_hint_message">本文</string>
    <string name="default_subject">これから帰ります。</string>
    <string name="default_message">家には[HH:MM]頃になります。</string>
    <!-- TextView Text -->
    <string name="textview_gethometime">帰宅予定時間:</string>
    <string name="textview_replace_text">※[HH:MM]が帰宅時間に置き換えられます。</string>
    <!-- Dialog Text -->
    <string name="dialog_title_change_sendto">宛先を変更</string>
    <string name="dialog_message_change_sendto">宛先を変更します。よろしいですか？</string>
    <string name="dialog_button_text_ok">おk</string>
    <string name="dialog_button_text_cancel">ダメ</string>
    <!-- Toast Text -->
    <string name="toast_cannot_use_sms">SMSが使えません</string>
    <!-- Menu Text -->
    <string name="menu_text_mailtype">MMS／SMS</string>
    <string name="menu_text_config">設定</string>
    <!-- Spinner -->
    <string name="movetime">移動時間</string>
    <string name="movetime_prompt">移動時間を選択して下さい</string>
    <!-- Preference Activity -->
    <string name="pref_checkbox_title_about">あばうともーど</string>
    <string name="pref_checkbox_summary_about">帰宅時間を 5 or 10 分単位で指定します</string>
    <string name="pref_checkbox_title_usesubject">SMSで件名を本文に含める</string>
    <string name="pref_checkbox_summary_usesubject">SMSモードの時に本文の最初に件名を挿入します</string>

</resources>